# journal-project

./: README.md  README.rst  compose.yaml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml
backend/migrations/models/: 0_20240426110056_init.py  1_20240426124907_update.py
backend/src/: main.py
backend/src/core/: config.py  models.py
backend/src/crud/: user.py
backend/src/schemas/: user.py
backend/tests/: test_main.py
